<resources>
    <string name="app_name">AppStoreBo</string>


    <!--DrawLayout-->
    <string name="app_update">App update</string>
    <string name="download_manager">DownLoad Manager</string>
    <string name="app_uninstall">App uninstall</string>
    <string name="notification_center">Notification Center</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="menu_search">Search</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="app_size">%1$s MB</string>

    <string name="guide_1">New Interface!</string>
    <string name="guide_2">More apps!</string>
    <string name="guide_3">Share with your Friends!</string>

    <string name="error_unknown">Unknown Error</string>
    <string name="error_http">Network Connecting Error</string>
    <string name="error_system">Server Error</string>
    <string name="error_account_freeze">Account freezed, please contact admin</string>
    <string name="error_api_no_permission">No permission</string>
    <string name="error_login">Username or Password Error</string>
    <string name="error_token">Please re-login.</string>
    <string name="error_http_400">Bad request</string>
    <string name="error_http_404">Not found</string>
    <string name="error_http_500">Internal server error</string>
    <string name="error_socket_timeout">Timeout Error</string>
    <string name="error_socket_unreachable">Network unreachable</string>
    <string name="loading">Loading...</string>
    <string name="empty_data">No data, please come back soon.</string>

    <string name="hot_game">Hot Games</string>
    <string name="hot_top">Top items</string>
    <string name="hot_app">Top apps</string>
    <string name="phone_number">Cell phone number</string>
    <string name="password">Password</string>
    <string name="default_loading">loading</string>
    <string name="sign_in">Sign In</string>
    <string name="download">Down</string>

    <string name="accessibility_service_description">Smart Install</string>
    <string name="smart_install">Smart Install</string>
</resources>
