<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_app_update"
            android:title="@string/app_update"/>

        <item
            android:id="@+id/menu_download_manager"
            android:title="@string/download_manager"/>

        <item
            android:id="@+id/menu_app_uninstall"
            android:title="@string/app_uninstall"/>

        <item
            android:id="@+id/menu_setting"
            android:title="@string/settings"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_logout"
            android:title="@string/log_out"/>
    </group>

</menu>